# mc_traj-imgui

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
lib/: CMakeLists.txt  imgui_impl_opengl3_srgb.cpp
src/: imconfig.h  main.cpp  mc_traj.c  mc_traj.h  traj_window.cpp  traj_window.h  util.h
